css/agency.css
/* ... */
header {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    background-image: url(../img/Desert.jpg);
    height: 600px;



    /*/!* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1f607e+0,34a6c1+100 *!/*/
    /*background: #1f607e; /!* Old browsers *!/*/
    /*background: -moz-linear-gradient(left,  #1f607e 0%, #34a6c1 100%); /!* FF3.6+ *!/*/
    /*background: -webkit-gradient(linear, left top, right top, color-stop(0%,#1f607e), color-stop(100%,#34a6c1)); /!* Chrome,Safari4+ *!/*/
    /*background: -webkit-linear-gradient(left,  #1f607e 0%,#34a6c1 100%); /!* Chrome10+,Safari5.1+ *!/*/
    /*background: -o-linear-gradient(left,  #1f607e 0%,#34a6c1 100%); /!* Opera 11.10+ *!/*/
    /*background: -ms-linear-gradient(left,  #1f607e 0%,#34a6c1 100%); /!* IE10+ *!/*/
    /*background: linear-gradient(to right,  #1f607e 0%,#34a6c1 100%); /!* W3C *!/*/
    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1f607e', endColorstr='#34a6c1',GradientType=1 ); /!* IE6-9 *!/*/






    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

header .container {
    padding-top: 150px;
    padding-bottom: 10px;
}

header img {
    display: block;
    margin: 0 auto 20px;
}

header .intro-text {
    padding-top: 80px;
    padding-bottom: 50px;
}

header .intro-text .intro-lead-in {
    margin-bottom: 25px;
    font-size: 22px;
    line-height: 22px;
}

header .intro-text .intro-heading {
    margin-bottom: 25px;
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 50px;
    font-weight: 700;
    line-height: 50px;
}

@media(min-width:768px) {
    header .intro-text {
        padding-top: 50px;
        padding-bottom: 50px;
    }

    header .intro-text .intro-lead-in {
        margin-bottom: 25px;
        font-size: 30px;
        line-height: 40px;
    }

    header .intro-text .intro-heading {
        margin-bottom: 50px;
        text-transform: uppercase;
        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size: 75px;
        font-weight: 700;
        line-height: 75px;
    }
}

.outer_section {
    padding: 100px 0;
}

.inner_section {
    padding: 50px 0;
}

.first_section {
    padding-top: 0px;
    padding-bottom: 50px;
}

section h2.section-heading {
    margin-top: 0;
    margin-bottom: 15px;
    font-size: 40px;
}

section h2.bottom-margin {
    margin-bottom: 75px;
}

section h3.section-subheading {
    margin-bottom: 75px;
    text-transform: none;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
    font-weight: 400;
}

@media(min-width:768px) {
    .outer_section {
        padding: 100px 0;
    }
}

.service-heading {
    margin: 15px 0;
    text-transform: none;
}

#portfolio .portfolio-item {
    right: 0;
    margin: 0 0 15px;
}

#portfolio .portfolio-item .portfolio-link {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    background: rgba(254,209,54,.9);
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
    opacity: 1;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    font-size: 20px;
    color: #fff;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
    margin-top: -12px;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
    margin: 0;
}

#portfolio .portfolio-item .portfolio-caption {
    margin: 0 auto;
    padding: 25px;
    max-width: 400px;
    text-align: center;
    background-color: #fff;
}

#portfolio .portfolio-item .portfolio-caption h4 {
    margin: 0;
    text-transform: none;
}

#portfolio .portfolio-item .portfolio-caption p {
    margin: 0;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
}

#portfolio * {
    z-index: 2;
}

@media(min-width:767px) {
    #portfolio .portfolio-item {
        margin: 0 0 30px;
    }
}


aside.clients img {
    margin: 50px auto;
}

section#contact {
    /*background-image: url(../img/map-image.png);*/
    background-position: center;
    background-repeat: no-repeat;
}

section#contact .form-group input.form-control {
    height: auto;
}

section#contact .form-control:focus {
    border-color: #fed136;
    box-shadow: none;
}

section#contact::-webkit-input-placeholder {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact:-moz-placeholder {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact::-moz-placeholder {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact:-ms-input-placeholder {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact .text-danger {
    color: #e74c3c;
}

footer {
    padding: 25px 0;
    text-align: center;
}
/* ... */

